@@ -1,3 +1,7 @@
+2006-04-15  Ales Hakl  <ales at hakl dot net>
+
+	* configure.ac: Correct handling of arguments (autoconf is magic)
+
 2006-04-09  Ales Hakl  <ales at hakl dot net>
 
 	* src/dfsch.c (dfsch_unintern): Compare object pointers, not data 
